// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-key can use t-key directive on a node 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['beer'].id;
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key can use t-key directive on a node 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['beer'].id;
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key can use t-key directive on a node as a function 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['getKey'](ctx['beer']);
    const b2 = toggler(tKey_1, safeOutput(ctx['beer'].name));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;

exports[`t-key t-key directive in a list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['beers']);;
    for (let i1 = 0; i1 < l_block2; i1++) {
      ctx[\`beer\`] = k_block2[i1];
      const key1 = ctx['beer'].id;
      const b4 = safeOutput(ctx['beer'].name);
      c_block2[i1] = withKey(block3([], [b4]), key1);
    }
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-key t-key on sub dom node pushes a child block in its parent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<span/>\`);
  let block3 = createBlock(\`<div><h1/></div>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['hasSpan']) {
      b2 = block2();
    }
    const tKey_1 = ctx['key'];
    b3 = toggler(tKey_1, block3());
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-key t-key on sub dom node pushes a child block in its parent 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><h1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['key'];
    return toggler(tKey_1, block1());
  }
}"
`;

exports[`t-key t-key: interaction with t-esc 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<p><block-text-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['key'];
    let txt1 = ctx['text'];
    return toggler(tKey_1, block1([txt1]));
  }
}"
`;

exports[`t-key t-key: interaction with t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = ctx['key'];
    const b2 = toggler(tKey_1, safeOutput(ctx['text']));
    return toggler(tKey_1, block1([], [b2]));
  }
}"
`;
